--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_storage: ^2.1.1
   http: 0.13.0
   cached_network_image: ^3.2.3
+  firebase_messaging: ^14.6.1
+  firebase_core: ^2.13.0
+  flutter_local_notifications: ^14.1.0
 
 dev_dependencies:
   flutter_test:
